src/objects/knowledgecontent__c.object
<CustomObject>
    <fields>
        <fullName>Is_published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否发布</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>content__c</fullName>
        <label>解决方案</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>describe__c</fullName>
        <label>故障描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>keyword__c</fullName>
        <label>关键字</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgetype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>故障类型</label>
        <referenceTo>knowledgetype__c</referenceTo>
        <relationshipLabel>知识库内容</relationshipLabel>
        <relationshipName>pZEP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>知识库内容</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Q&amp;A编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>知识库内容</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>